<resources>
    <string name="app_name">android_dp58_nguyenvuphuong</string>
    <string name="InfoFragment">Info Fragment</string>
    <string name="Name">Name: Nguyen Vu Phuong</string>
    <string name="Student">Student ID: ADR58_D2</string>
    <string name="Class">Class: Android Basic</string>
    <string name="Email">Email: vphuong4725@gmail.com\"</string>
    <string name="ActionFragment">Action Fragment</string>
    <string name="Call">Call</string>
    <string name="email">Email</string>
    <string name="MainActivity">Main Activity</string>
    <string name="Profile">Profile</string>
    <string name="Back">Back</string>
    <string name="Info">Info</string>
    <string name="Action">Action</string>
    <string name="Description">Description</string>
    <string name="menuIcon">☰</string>
    <string name="editPen">✎</string>
    <string name="other">⋯</string>
    <string name="search">⌕</string>
    <string name="camera">📷</string>
    <string name="fbName">Nguyễn Phương</string>
    <string name="fbBio">167 followers  ·  706 following  ·  16 posts</string>
    <string name="otherBio">Friends with things in common</string>
    <string name="love">I love ICTU</string>
    <string name="InfoFB"><![CDATA[▣ Digital creator  ·  📍 Thái Nguyên  ·  🎓 Trường Đại học Công nghệ thông tin &amp; Truyền thông, Thái Nguyên]]></string>
    <string name="Dashboard">▣  Dashboard</string>
    <string name="reel">▣  Create reel</string>
    <string name="all">All</string>
    <string name="Reel">Reels</string>
    <string name="Tag">Photos</string>
    <string name="Events">Events</string>
    <string name="PersonalDetails">Personal details                                      ✎</string>
    <string name="adress">📍   Thái Nguyên</string>
    <string name="HomeAdress">⌂   Thái Nguyên</string>
    <string name="dB">▭   July 18, 1950</string>
    <string name="MoreDetail">"        See more details"</string>
    <string name="edu">Education                                             ✎</string>
    <string name="university"><![CDATA[Trường Đại học Công nghệ thông tin &amp; Truyền thông, Thái Nguyên]]></string>
    <string name="tabHome">⌂ Home</string>
    <string name="tabReel">▣ Reels</string>
    <string name="tabMarket">▤ Marketplace</string>
    <string name="tabGame">⊙ Games</string>
    <string name="noty">♢ Notifications</string>
    <string name="tabProfile">● Profile</string>
    <string name="detail">Detail</string>
    <string name="wifi">Free Wifi</string>
    <string name="free_breakfast">Free Breakfast</string>
    <string name="star">5.0</string>
    <string name="decription">Decription</string>
    <string name="full_description">Aston Hotel, Alice Springs NT 0870, Australia is a modern hotel, elegant 5 star hotel overlooking the sea, perfect for a romantic, charming and relaxing vacation with family and friends. The hotel offers luxury rooms, free high speed wifi, delicious breakfast, beautiful sea views and excellent customer service. Guests can enjoy the peaceful atmosphere, outdoor swimming pool and many exciting activities nearby. <font color='#5B4DFC'><b>Collapse</b></font>
    </string>
    <string name="read_more">Read More. . .</string>
    <string name="preview">Preview</string>
    <string name="booking_now">Booking Now</string>
    <string name="home_name">The Aston Vill Hotel</string>
    <string name="location">Alice Springs NT 0870, Australia</string>
    <string name="price_month">$200.7</string>full_description
    <string name="decription_detail">Aston Hotel, Alice Springs NT 0870, Australia is a modern hotel. elegant 5 star hotel overlooking the sea. perfect for a romantic, charming <font color='#5B4DFC'><b>Read More...</b></font>
    </string>
    <string name="logo_pinterest">Pinterest</string>
    <string name="ForYou">For You</string>
    <string name="Popular">Popular</string>
    <string name="Design">Design</string>
    <string name="Technology">Technology</string>
    <string name="Food">Food</string>
    <string name="Travel">Travel</string>
    <string name="logo_coffee_menu">Coffee Menu</string>
    <string name="SBC">Search by coffee name</string>
    <string name="price">$ 0</string>
    <string name="total">TOTAL</string>
    <string name="sub_total">Sub Total</string>
    <string name="totalprice">$ 0</string>
    <string name="numberitem">0 Item(s)</string>
    <string name="quantitycart">0</string>
    <string name="cart_coffee_name">Mixed Black Coffee</string>
    <string name="coffee_name">Espresso</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="cart">Cart</string>
    <string name="empty_cart">No item in your cart</string>
    <string name="rating">⭐ 4.5</string>
    <string name="detail_name_food">Gourmet dessert</string>
    <string name="detail_description_food">Elegant layered mousse cake with fresh fruit toppings, including blueberries.</string>
    <string name="detail_time">Cooking time</string>
    <string name="detail_time_m">30 mins</string>
    <string name="detail_difficulty">Difficulty</string>
    <string name="detail_difficulty_m">Medium</string>
    <string name="detail_serving">Servings</string>
    <string name="detail_serving_m">4 people</string>
    <string name="detail_ingredients">Ingredients (5)</string>
    <string name="detail_rate_recipe">Rate Recipe</string>
    <string name="MainTitleFood">All recipes</string>
    <string name="MainHintSearch">Search here</string>
    <string name="tabBreakfast">Breakfast</string>
    <string name="tabLunch">Lunch</string>
    <string name="tabDinner">Dinner</string>
    <string name="tabSnack">Snack</string>
    <string name="foodName">Gourmet dessert</string>
    <string name="foodInfo">30 mins  •  ⭐ 4.3</string>
    <string name="amount">300 gr</string>
    <string name="nutrition">Protein</string>
    <string name="nutrition_2">Fat</string>
    <string name="nutrition_3">Carb</string>
    <string name="search_note">Search ...</string>
    <string name="my_notes">My notes</string>
    <string name="get_pro">Get Pro</string>
    <string name="create_tag">+ Create tag</string>
    <string name="add_note">+ Add Note</string>
    <string name="edit_note">Note detail</string>
    <string name="note_title">Note title</string>
    <string name="note_date">30 jun, 2026  •  00:04:59</string>
    <string name="note_content">Write your note here...</string>
    <string name="note_duration">Duration, example: 00:04:59</string>
    <string name="not_tag">Work</string>
    <string name="note_new">NEW</string>
    <string name="list_products">Danh sách sản phẩm</string>
    <string name="product_name">Product name</string>
    <string name="product_price">19.99 USD</string>
    <string name="name_avata">John Doe</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
</resources>