<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/edt_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edt_note_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/note_duration"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edt_note_content"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:gravity="top"
        android:hint="@string/note_content"
        android:background="@drawable/bg_search_box_d8"
        android:padding="10dp" />

</LinearLayout>